--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,8 +1,14 @@
+html, body, #root {
+  height: 100%;
+  min-height: 100vh;
+  margin: 0;
+}
+
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .logo {
@@ -33,10 +39,6 @@
   }
 }
 
-.card {
-  padding: 2em;
-}
+.card { padding: 2em; }
 
-.read-the-docs {
-  color: #888;
-}
+.read-the-docs { color: #888; }
