--- a/frontend/src/Components/pharmacy_dashboard.css
+++ b/frontend/src/Components/pharmacy_dashboard.css
@@ -1,5 +1,5 @@
 :root {
-    --primary-color: #008060; 
+    --primary-color: #1a9e87; 
     --primary-hover-color: #00664c;
     --secondary-color: #e5e7eb;
     --danger-color: #dc2626;
@@ -49,6 +49,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    height: 75px;
 }
 
 .logo {
@@ -310,6 +311,32 @@ body {
     padding: 0.5rem 1rem;
     border-radius: var(--border-radius);
     cursor: pointer;
+}
+.fm-footer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--teal-color); 
+  padding: 15px 30px;
+  width: 100%;
+  flex-wrap: nowrap;
+  flex-shrink: 0;
+  position: static; 
+  margin-top: auto; 
+}
+
+.fm-footer-links {
+    display: flex;
+    flex-wrap: nowrap;
+    justify-content: center;
+    gap: 30px; 
+}
+
+.fm-footer a {
+  text-decoration: none;
+  color: white;
+  font-size: 0.85rem;
 }
 
 @media (min-width: 768px) {
